--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_detail_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_detail_list.html
@@ -30,7 +30,7 @@
         <div id="menu">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" th:href="@{resort}">Furama resort</a>
+                    <a class="navbar-brand" th:href="@{/resort}">Furama </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -93,7 +93,7 @@
                         </a></td>
                     </tr>
                     </thead>
-                    </tbody>
+
                 </table>
                 <div>
                     <h3>
@@ -115,6 +115,7 @@
             </div>
         </div>
     </div>
+
     <div class="card-footer text-muted">
         ToNgPhUc@gmail.com
     </div>
