--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_user_facility.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_user_facility.html
@@ -66,8 +66,8 @@
                     </div>
                 </div>
             </nav>
-            <div class="container text-center m-5">
-                <a href="/customer/create" class="btn btn-outline-success">Create New customer</a>
+            <div style="color: green" class="container text-center m-5">
+                <h3>List Customer User Facility</h3>
             </div>
             <div class="container">
 
@@ -83,13 +83,12 @@
                         <td>EMAIL</td>
                         <td>ADDRESS</td>
                         <td>CUSTOMER TYPE NAME</td>
-                        <td>EDIT</td>
-                        <td>DELETE</td>
+                        <td> Attach Facility </td>
 
                     </tr>
 
 
-                    <tr th:each="customer :  ${customerList}">
+                    <tr th:each="customer :  ${customerPage}">
                         <td th:text="${customer.id}"></td>
                         <td th:text="${customer.nameCustomer}"></td>
                         <td th:text="${customer.dateOfBirth}"></td>
@@ -100,15 +99,11 @@
                         <td th:text="${customer.email}"></td>
                         <td th:text="${customer.address}"></td>
                         <td th:text="${customer.customerType.nameCustomerType}"></td>
-                        <td><a th:href="@{/customer/{id}/edit(id=${customer.getId()})}">
-                            <button class="btn btn-success ">edit</button>
-                        </a>
-                        </td>
                         <td>
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-success " data-bs-toggle="modal"
                                     th:data-bs-target=" '#exampleModal' + ${customer.id}">
-                                delete
+                                Attach Facility
                             </button>
 
                             <!-- Modal -->
@@ -118,24 +113,27 @@
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 style="color: green" class="modal-title" id="exampleModalLabel">Delete
-                                                Customer </h5>
+                                            <h5 style="color: green" class="modal-title" id="exampleModalLabel">
+                                                Attach Facility list </h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body" style="color: green">
-                                            bạn có muốn xóa <span
-                                                th:text="${customer.customerType.nameCustomerType}"></span> với id
-                                            = <span
-                                                th:text="${customer.id}"></span> ?
+
+                                            <table class="table">
+                                                <tr th:each="contract: ${customer.contractList}">
+                                                    <td th:each="contractDetail: ${contract.contractDetailList}"
+                                                    th:text="${contractDetail.attachFacility.nameAttach}">
+
+                                                    </td>
+                                                </tr>
+                                            </table>
+
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                            <button type="button" class="btn btn-success " data-bs-dismiss="modal">
                                                 Close
                                             </button>
-                                            <a th:href="@{/customer/{id}/delete(id=${customer.getId()})}">
-                                                <button class="btn btn-success ">delete</button>
-                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -147,15 +145,15 @@
 
                 <div style="float: right">
                     <h3>
-                        <a th:if="${customerList.hasPrevious()}"
-                           th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">
+                        <a th:if="${customerPage.hasPrevious()}"
+                           th:href="@{/customer/(page=${customerPage.number - 1} , keyword= ${keywordVal})}">
                             <i style="color: yellow" class="fa-solid fa-backward"></i>
                         </a>
-                        <span th:text="${customerList.number +1}"></span>
+                        <span th:text="${customerPage.number +1}"></span>
                         /
-                        <span th:text="${customerList.totalPages}"></span>
-                        <a th:if="${customerList.hasNext()}"
-                           th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">
+                        <span th:text="${customerPage.totalPages}"></span>
+                        <a th:if="${customerPage.hasNext()}"
+                           th:href="@{/customer/(page=${customerPage.number + 1} , keyword= ${keywordVal})}">
                             <i style="color: yellow" class="fa-solid fa-forward"></i>
                         </a>
                     </h3>
