--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/facility_edit.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/facility_edit.html
@@ -65,7 +65,7 @@
         <div class="container mt-4">
             <div class="row w-50 mx-auto">
                 <div class="row">
-                    <h2>Create facility</h2>
+                    <h2>Edit facility</h2>
                     <form th:action="@{/resort/edit}" th:object="${facilityOject}" method="post">
                         <div class="form-outline mb-4">
                             <input th:field="*{id}" class="form-control" type="hidden"/>
@@ -105,44 +105,59 @@
                                     </select>
                                 </div>
 
+
+                            </div>
+
+                            <!---------------------------->
+
+
+
+
+                            <div class="col-6">
                                 <div class="form-outline mb-4">
                                     <label class="form-label">Name Facility Type</label>
-                                    <select th:field="*{facilityType}" class="form-select"
-                                            aria-label="Default select example">
+                                    <select th:field="*{facilityType}" class="form-select" id="selectType"
+                                            aria-label="Default select example" onchange="getForm()">
                                         <option th:each="facilityType: ${facilityTypeList}"
                                                 th:value="${facilityType.id}"
                                                 th:text="${facilityType.nameFacilityType}">
                                         </option>
                                     </select>
                                 </div>
-                            </div>
 
-                            <!---------------------------->
-
-                            <div class="col-6">
-                                <div class="form-outline mb-4">
-                                    <label class="form-label">Standard Room</label>
-                                    <input th:field="*{standardRoom}" class="form-control"/>
+                                <div id="room-facility">
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">facility Free</label>
+                                        <input th:field="*{facilityFree}" class="form-control"/>
+                                    </div>
                                 </div>
 
-                                <div class="form-outline mb-4">
-                                    <label class="form-label">Description Other Convenience</label>
-                                    <input th:field="*{descriptionOtherConvenience}" class="form-control"/>
+
+                                <div id="villa-facility" style="display: none">
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">Pool Area</label>
+                                        <input th:field="*{poolArea}" class="form-control"/>
+                                    </div>
+
                                 </div>
 
-                                <div class="form-outline mb-4">
-                                    <label class="form-label">Pool Area</label>
-                                    <input th:field="*{poolArea}" class="form-control"/>
-                                </div>
+                                <div id="house-facility" style="display: none">
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">Standard Room</label>
+                                        <input th:field="*{standardRoom}" class="form-control"/>
+                                    </div>
 
-                                <div class="form-outline mb-4">
-                                    <label class="form-label">Number Of Floors</label>
-                                    <input th:field="*{numberOfFloors}" class="form-control"/>
-                                </div>
 
-                                <div class="form-outline mb-4">
-                                    <label class="form-label">facility Free</label>
-                                    <input th:field="*{facilityFree}" class="form-control"/>
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">Description Other Convenience</label>
+                                        <input th:field="*{descriptionOtherConvenience}" class="form-control"/>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">Number Of Floors</label>
+                                        <input th:field="*{numberOfFloors}" class="form-control"/>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -166,6 +181,29 @@
     </div>
 </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+
+    function getForm(){
+        let valueSelectType = $('#selectType').val();
+        if(valueSelectType === '3'){
+            $('#room-facility').show();
+            $('#villa-facility').hide();
+            $('#house-facility').hide();
+        }
+        if(valueSelectType === '2'){
+            $('#house-facility').show();
+            $('#room-facility').hide();
+            $('#villa-facility').hide();
+        }
+        if(valueSelectType === '1'){
+            $('#villa-facility').show();
+            $('#house-facility').show();
+            $('#room-facility').hide();
+        }
+    }
+
+</script>
 <th:block th:replace="~{common-html :: boostrapScript}"></th:block>
 </html>
 
