--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_list.html
@@ -44,17 +44,16 @@
                                 <a class="nav-link" th:href="@{/customer}">Customer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" th:href="@{/employee}">Employee</a>
+                                <a class="nav-link" th:href="@{/customerUserFacility}">customer-Facility</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Other
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" th:href="@{/resort/facility}">Facility</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/contract}">Contract</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/booking}">Booking</a></li>
+                                    <li><a class="dropdown-item"  th:href="@{/contract}">Contract</a></li>
+                                    <li><a class="dropdown-item"  th:href="@{/employee}">Employee</a></li>
                                 </ul>
                             </li>
                         </ul>
