--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_create.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_create.html
@@ -77,6 +77,7 @@
                                     <label class="form-label">Name Customer</label>
                                     <input th:field="*{nameCustomer}" class="form-control"/>
                                 </div>
+                                <div style="color: brown" class="form-outline mb-4" th:errors="*{nameCustomer}"></div>
 
                                 <div class="form-outline mb-4">
                                     <label class="form-label">Date Of Birth</label>
@@ -100,9 +101,9 @@
                                 <div class="form-outline mb-4">
                                     <label class="form-label">id Card</label>
                                     <input th:field="*{idCard}" class="form-control"/>
-
-
                                 </div>
+                                <div style="color: brown" class="form-outline mb-4" th:errors="*{idCard}"></div>
+
 
 
                             </div>
@@ -114,11 +115,15 @@
                                     <label class="form-label">Phone Number</label>
                                     <input th:field="*{phoneNumber}" class="form-control"/>
                                 </div>
+                                <div style="color: brown" class="form-outline mb-4" th:errors="*{phoneNumber}"></div>
+
 
                                 <div class="form-outline mb-4">
                                     <label class="form-label">Email</label>
                                     <input th:field="*{email}" class="form-control"/>
                                 </div>
+                                <div style="color: brown" class="form-outline mb-4" th:errors="*{email}"></div>
+
 
                                 <div class="form-outline mb-4">
                                     <label class="form-label">Address</label>
