--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_user_facility.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_user_facility.html
@@ -45,6 +45,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/employee}">Employee</a>
                             </li>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/customerUserFacility}">customer-Facility</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                    data-bs-toggle="dropdown" aria-expanded="false">
