--- a/module5/casestudy/angular-casestudy-module5/src/app/facility-list/facility-list.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/facility-list/facility-list.component.html
@@ -4,6 +4,7 @@
     <a href="/customer/create" class="btn btn-outline-success">Create New Facility</a>
   </div>
   <table class="table">
+    <thead>
     <tr>
       <td>STT</td>
       <td>NAME</td>
@@ -18,53 +19,58 @@
       <td>EDIT</td>
       <td>DELETE</td>
     </tr>
-    <tr>
-      <td>1</td>
-      <td>Lê Văn phúc</td>
-      <td>1000</td>
-      <td>100</td>
-      <td>10</td>
-      <td>Year</td>
-      <td>Villa</td>
-      <td>Vip</td>
-      <td>100</td>
-      <td>10</td>
+    </thead>
+<tbody>
+<tr>
 
-      <td><a>
-        <button class="btn btn-primary">edit</button>
-      </a></td>
+<td>1</td>
+<td>Lê Văn phúc</td>
+<td>1000</td>
+<td>100</td>
+<td>10</td>
+<td>Year</td>
+<td>Villa</td>
+<td>Vip</td>
+<td>100</td>
+<td>10</td>
 
-      <td>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
-          Delete
-        </button>
+<td><a>
+  <button class="btn btn-primary">edit</button>
+</a></td>
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1"
-             aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                  Close
-                </button>
-                <button type="button" class="btn btn-primary">Delete</button>
-              </div>
-            </div>
-          </div>
+<td>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+          data-bs-target="#exampleModal">
+    Delete
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1"
+       aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"
+                  aria-label="Close"></button>
         </div>
-      </td>
-    </tr>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</td>
+</tr>
+</tbody>
+
   </table>
   <div id="page" class="d-flex justify-content-end ">
     <ul class="pagination">
