--- a/module5/casestudy/angular-casestudy-module5/src/app/facility-create/facility-create.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/facility-create/facility-create.component.html
@@ -3,7 +3,7 @@
 <div class="container mt-4">
   <div class="row w-50 mx-auto">
     <div class="row">
-      <h2>Create customer</h2>
+      <h2>Create facility</h2>
       <form action="@{/customer/edit}" object="${customer}" method="post">
         <div class="form-outline mb-4">
           <input field="*{id}" class="form-control" type="hidden"/>
