--- a/module5/casestudy/angular-casestudy-module5/src/app/customer-create/customer-create.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/customer-create/customer-create.component.html
@@ -80,9 +80,9 @@
             </div>
 
             <button type="submit" class="btn btn-primary btn-block bg-momo">
-              edit
+           save
             </button>
-            <a href="@{/customer}">
+            <a [routerLink]="['/customer-list']">
               <button type="button" class="btn btn-primary btn-block bg-momo">
                 Back To List
               </button>
