--- a/module5/casestudy/angular-casestudy-module5/src/app/furama/furama.component.css
+++ b/module5/casestudy/angular-casestudy-module5/src/app/furama/furama.component.css
@@ -1,4 +1,7 @@
-
+.card-title{
+  font-family: 'Dancing Script',sans-serif !important;
+  font-size: 22px;
+}
 .nav-link{
   font-family: 'Dancing Script',sans-serif !important;
   font-size: 22px;
