--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_user_facility.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_user_facility.html
@@ -74,10 +74,9 @@
                 <h3>List Customer User Facility</h3>
             </div>
             <div class="container">
-
-
                 <table class="table table-dark table-striped">
                     <tr>
+<!--                        <td>facility name</td>-->
                         <td>STT</td>
                         <td>NAME</td>
                         <td>DATE OF BIRTH</td>
@@ -87,12 +86,13 @@
                         <td>EMAIL</td>
                         <td>ADDRESS</td>
                         <td>CUSTOMER TYPE NAME</td>
-                        <td> Attach Facility </td>
-
+                        <td> Attach Facility</td>
                     </tr>
-
-
                     <tr th:each="customer :  ${customerPage}">
+<!--                        <td th:each="contract : ${customer.contractList}"-->
+<!--                            -->
+<!--                        th:text="${contract.facility.nameFacility}"></td>-->
+
                         <td th:text="${customer.id}"></td>
                         <td th:text="${customer.nameCustomer}"></td>
                         <td th:text="${customer.dateOfBirth}"></td>
@@ -127,7 +127,7 @@
                                             <table class="table">
                                                 <tr th:each="contract: ${customer.contractList}">
                                                     <td th:each="contractDetail: ${contract.contractDetailList}"
-                                                    th:text="${contractDetail.attachFacility.nameAttach}">
+                                                        th:text="${contractDetail.attachFacility.nameAttach}">
 
                                                     </td>
                                                 </tr>
