--- a/module5/casestudy/angular-casestudy-module5/src/app/facility-edit/facility-edit.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/facility-edit/facility-edit.component.html
@@ -103,7 +103,7 @@
         <button type="submit" class="btn btn-primary btn-block bg-momo">
           save
         </button>
-        <a href="@{/resort/facility}">
+        <a [routerLink]="['/facility-list']">
           <button type="button" class="btn btn-primary btn-block bg-momo">
             Back To List
           </button>
@@ -115,3 +115,27 @@
 </div>
 </div>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+
+  function getForm(){
+    let valueSelectType = $('#selectType').val();
+    if(valueSelectType === '3'){
+      $('#room-facility').show();
+      $('#villa-facility').hide();
+      $('#house-facility').hide();
+    }
+    if(valueSelectType === '2'){
+      $('#house-facility').show();
+      $('#room-facility').hide();
+      $('#villa-facility').hide();
+    }
+    if(valueSelectType === '1'){
+      $('#villa-facility').show();
+      $('#house-facility').show();
+      $('#room-facility').hide();
+    }
+  }
+
+</script>
