--- a/module5/casestudy/angular-casestudy-module5/src/app/footer/footer.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/footer/footer.component.html
@@ -1,4 +1,35 @@
-<div class="card-footer text-muted clearfix" style="text-align: center">
-  ToNgPhUc@gmail.com
-</div>
+<!--<div class="card-footer text-muted clearfix" style="text-align: center">-->
+<!--  ToNgPhUc@gmail.com-->
+<!--</div>-->
 
+<div class="container-fluid text-silver text-center">
+
+  <div class="row" style="background: silver">
+    <div class="col-sm-4">
+      <img src="/kisspng-logo-travel-com-brand-net-travel-black-5b3e0a27274d65.595599821530792487161.png"
+           style="height: auto" width="150px">
+
+      <div style="color: black ;text-align: left">
+        <p>© 2022 Zozo. Powered by iNET</p><br>
+        <p>© 2022 Zozo. ToNgPhuc95@gmial.com</p>
+        <p>quản lí vé du lịch trên thiết bị di động</p>
+      </div>
+      <img src="https://zozo.vn/public/theme/touched/images/icon-footer/app_store.svg">
+      <img src="https://zozo.vn/public/theme/touched/images/icon-footer/google_play.svg">
+    </div>
+    <div class="col-sm-4 " style="text-align: left">
+      <h5>Đà Nẵng</h5>
+      <p>Tòa nhà S-HOME, Số 56 Nguyễn Tri Phương, Phường Chính Gián, Quận Thanh Khê</p>
+      <p>Email: ToNgPhuc95@gmail.com</p>
+      <p>Hotline: 0936.231.322</p>
+    </div>
+
+    <div class="col-sm-4 " style="text-align: left">
+      <h5>Hồ Chí Minh</h5>
+      <p>Tòa nhà S-HOME, Số 56 Cách mạng tháng 8 Hồ chí minh,</p>
+      <p>Email: ToNgPhuc95@gmail.com</p>
+      <p>Hotline: 0936.231.322</p>
+    </div>
+
+  </div>
+</div>
