--- a/module5/casestudy/angular-casestudy-module5/src/app/header/header.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/header/header.component.html
@@ -1,39 +1,42 @@
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="@{/resort}">Furama </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="@{/customer}">Customer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="@{/customerUserFacility}">customer-Facility</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                 data-bs-toggle="dropdown" aria-expanded="false">
-                Other
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="@{/resort/facility}">Facility</a></li>
-                <li><a class="dropdown-item" href="@{/contract}">Contract</a></li>
-                <li><a class="dropdown-item" href="@{/employee}">Employee</a></li>
-              </ul>
-            </li>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/furama']"><img id="logoFurama"
+                                                           src="https://img.freepik.com/premium-vector/palm-realestate-logo_8050-36.jpg?w=2000"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link"[routerLink]="['/customer-list']" >Customer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  [routerLink]="['/customer-user-facility']">customer-facility</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/contract-list']">Contract</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+             data-bs-toggle="dropdown" aria-expanded="false">
+            Other
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" [routerLink]="['/facility-list']">Facility</a></li>
+            <li><a class="dropdown-item"[routerLink]="['/employee-list']">Employee</a></li>
+            <li><a class="dropdown-item" href="@{/contract}">Plane ticket</a></li>
+            <li><a class="dropdown-item" href="@{/employee}">Spaceship</a></li>
+
           </ul>
+        </li>
 
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search">
+        <button class="btn btn-primary" type="button">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
 
-          <form class="d-flex" action="/customer/">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <!--                                   name="keyword" value="${keywordVal}"-->
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
